--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -4,7 +4,7 @@
 <div id="breadcrumbs">
   <div class="breadcrumbs-left">
     <a href="/">
-      <image src="/img/home.svg" height=64>
+      <image src="/img/home.png" height=64>
     </a>
     <a href="/about">
       <image src="/img/info.png" height=64>
