--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
                     }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name
                     }}</a>.</span>
             {% endif %}
-            <span class="site-footer-credits">for removal/submission of content <a href="mailto:sbus+osm@simplelogin.co">e-mail me</a><br>Copied and Pasted by (2*root2)^4 </span>
+            <span class="site-footer-credits">for removal/submission of content <a href="mailto:sbus+osm@simplelogin.co">e-mail me</a><br><a href="htttps://github.com/ctetezpurtrainees/">Source Code</a><br>Copied and Pasted by (2*root2)^4 </span>
 			<!-- Code Credit:https://github.com/onslowcollege/  -->
         </footer>
     </main>
