--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
         <nav>
             <!-- <a href="{{ site.url }}/about" class="btn">About</a>
             <a href="{{ site.url }}/gubedcet21" class="btn">GU B.Ed. CET 2021</a>
+			<a href="{{ site.url }}/blog" class="btn">Blog</a>
             <a href="{{ site.url }}/gallery" class="btn">Gallery</a>
             {% if site.github.is_project_page %}
             <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
