--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
                     }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name
                     }}</a>.</span>
             {% endif %}
-            <span class="site-footer-credits">for removal/submission of content <a href="mailto:sbus+osm@simplelogin.co">e-mail me</a><br><a href="https://github.com/ctetezpurtrainees/ctetezpurtrainees.github.io">Source Code</a><br></span>
+            <span class="site-footer-credits">for removal/submission of content <a href="mailto:sbus+osm@simplelogin.co">e-mail me</a><br><a href="https://github.com/ctetezpurtrainees/ctetezpurtrainees.github.io">Source Code</a><br/>.-   -...<br/></span>
 			<!-- Code Credit:https://github.com/onslowcollege/  -->
         </footer>
     </main>
