--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -18,6 +18,10 @@
     <a href="/gallery">
       <image src="/img/gallery.png" height=64>
     </a>
+	<a href="/forum">
+      <image src="/img/forum.png" height=64>
+    </a>
+	
   </div>
   <div class="breadcrumbs-right">
     {% for crumb in crumbs offset: 1 %}
